--- a/index.htm
+++ b/index.htm
@@ -73,7 +73,7 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
      <div class="cont justify-content-center d-flex">
-       <div class="col-lg-10">
+       <div class="col-lg-10 px-5">
          <h1 class="text-white mb-2">WELCOME TO ANJANI PUTRA</h1>
         <p>Your Gateway to Prime Plots in Prithla Palwal.</p>
         <a href="" class="btn btn-lg">Contact us</a></div>
@@ -81,7 +81,7 @@
     </div>
     <div class="carousel-item">
      <div class="cont justify-content-center d-flex">
-       <div class="col-lg-10">
+       <div class="col-lg-10 px-5">
          <h1 class="text-white mb-2">DISCOVER YOUR DREAM PLOT WITH ANJANI PUTRA</h1>
         <p>Where Investment Meets Opportunity.</p>
         <a href="" class="btn btn-lg">Contact us</a></div>
